--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "tsconfig-paths": "^4.2.0"
     },
     "dependencies": {
+        "axios": "^1.4.0",
         "canvas": "^2.11.2",
         "dotenv": "^16.3.1",
+        "form-data": "^4.0.0",
         "revolt.js": "6.0.20"
     }
 }
