--- a/package.json
+++ b/package.json
@@ -5,25 +5,31 @@
     "main": "index.js",
     "scripts": {
         "start": "nodemon -r tsconfig-paths/register src/index.ts",
-        "build": "tsc"
+        "build": "tsc",
+        "test": "jest --watchAll --detectOpenHandles"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@jest/globals": "^29.5.0",
         "@types/node": "^20.3.1",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
         "eslint": "^8.43.0",
+        "jest": "^29.5.0",
         "nodemon": "^2.0.22",
+        "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0"
     },
     "dependencies": {
+        "@types/node-uci": "^1.3.2",
         "axios": "^1.4.0",
         "canvas": "^2.11.2",
         "dotenv": "^16.3.1",
         "form-data": "^4.0.0",
+        "node-uci": "^1.3.4",
         "revolt.js": "6.0.20"
     }
 }
