--- a/chess-game/Cargo.toml
+++ b/chess-game/Cargo.toml
@@ -24,6 +24,8 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 # allocator, however.
 wee_alloc = { version = "0.4.5", optional = true }
 pleco = "0.5.0"
+js-sys = "0.3.64"
+ril = { version = "0.9.0", features = ["png", "text"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
