--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon -r tsconfig-paths/register src/index.ts",
+       "start": "nodemon -e rs,toml --ignore ./chess-game/pkg/ --exec \"cd chess-game && make\" & nodemon -e ts,js,json -r tsconfig-paths/register src/index.ts",
         "build": "tsc",
         "test": "jest --watchAll --detectOpenHandles"
     },
@@ -18,15 +18,14 @@
         "@typescript-eslint/parser": "^5.60.0",
         "eslint": "^8.43.0",
         "jest": "^29.5.0",
-        "nodemon": "^2.0.22",
+        "nodemon": "^3.0.1",
         "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
+        "@types/node-uci": "^1.3.2",
         "tsconfig-paths": "^4.2.0"
     },
     "dependencies": {
-        "@types/node-uci": "^1.3.2",
         "axios": "^1.4.0",
-        "canvas": "^2.11.2",
         "dotenv": "^16.3.1",
         "form-data": "^4.0.0",
         "node-uci": "^1.3.4",
